. fixed span.item not align issue

--- a/src/main/webapp/less/filterPanel.less
+++ b/src/main/webapp/less/filterPanel.less
@@ -18,6 +18,7 @@
 				position:relative;
 				font-size: 12px;
 				color:#fff;
+                min-width: 60px;
 			}
 			.add{
 				cursor:pointer;
